# liked-music

./: .gitignore  README.md  pyproject.toml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2026-02-20-likedmusic-mvp/: plan.md  references.md  shape.md
agent-os/specs/2026-02-20-test-suite-and-dry-run/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-02-21-1430-switch-to-browser-auth/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-02-21-backup-restructure/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-02-21-interactive-cli/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-02-21-interactive-config-wizard/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-02-21-multi-playlist-sync/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-02-21-remix-metadata-parsing/: plan.md  references.md  shape.md  standards.md
agent-os/specs/2026-02-22-sync-ux-improvements/: plan.md  references.md  shape.md  standards.md
agent-os/standards/: documentation.md  error-handling.md  general.md  index.yml  virtual-env.md
likedmusic/: __init__.py  apple_music.py  cli.py  config.py  config_wizard.py  const.py  dashboard.py  downloader.py  logging_config.py  mcp_server.py  metadata.py  playlist_config.py  state.py  sync_engine.py  ytmusic.py
likedmusic/actions/: __init__.py  base.py  configure.py  setup_auth.py  status.py  sync.py
tests/: conftest.py  test_action_registry.py  test_actions.py  test_apple_music.py  test_cli.py  test_config.py  test_config_wizard.py  test_dashboard.py  test_downloader.py  test_mcp_server.py  test_metadata.py  test_metadata_embed.py  test_migration.py  test_playlist_config.py  test_state.py  test_state_io.py  test_sync_engine.py  test_sync_integration.py  test_ytmusic.py
