[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "likedmusic"
version = "0.1.0"
description = "Sync YouTube Music liked songs to Apple Music"
requires-python = ">=3.10"
dependencies = [
    "ytmusicapi>=1.11.0",
    "yt-dlp[default]>=2026.02.21",
    "mutagen",
    "requests",
    "rookiepy",
    "pyyaml",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "static-ffmpeg>=3.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
likedmusic = "likedmusic.cli:main"
likedmusic-mcp = "likedmusic.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
